corrigindo docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       dockerfile: .dockerfile
-    image: github.com/hyperyuri/webapi-db
+    image: github.com/diemersonf/books-crud-go
     container_name: webapi-mvc-db
     restart: unless-stopped
     tty: true
